<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="316dp" >

                    <ImageView
                        android:id="@+id/image_pic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/main_image" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp" >

                        <ImageView
                            android:id="@+id/image_cancel"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/cancel" />

                        <TextView
                            android:id="@+id/tv_nextPic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/nextPic"
                            android:textColor="@drawable/tv_nextpic"
                            android:textSize="15sp" />
                    </RelativeLayout>
                </FrameLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:background="#f3f3f3"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/image_openLocalGallery"
                        android:layout_width="127dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/image_xiangce"
                        android:scaleType="fitXY"/>

                    <ImageView
                        android:id="@+id/image_openCamera"
                        android:layout_width="127dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/image_xiangji"
                        android:scaleType="fitXY" />

                    <ProgressBar
                        android:id="@+id/progress_loading"
                        style="?android:attr/progressBarStyleInverse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="835"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tv_res"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            android:text="@string/eye_res"
                            android:textColor="#4f4f4f"
                            android:textSize="15sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_alignParentBottom="true"
                            android:background="#C9C9C9" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="42dp" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp" >

                            <TextView
                                android:id="@+id/tv_name"
                                android:layout_width="0px"
                                android:layout_height="wrap_content"
                                android:layout_weight="621"
                                android:text="@string/name"
                                android:textColor="#5c5c5c"
                                android:textSize="13sp" />

                            <TextView
                                android:id="@+id/tv_confi"
                                android:layout_width="0px"
                                android:layout_height="wrap_content"
                                android:layout_weight="459"
                                android:text="@string/confi"
                                android:textColor="#5c5c5c"
                                android:textSize="13sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_alignParentBottom="true"
                            android:background="#C9C9C9" />
                    </RelativeLayout>

                    <ListView
                        android:id="@+id/lv_res"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="#00000000"
                        android:dividerHeight="0dip" >
                    </ListView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:background="#f3f3f3" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tv_json_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            android:text="@string/res_json_title"
                            android:textColor="#5c5c5c"
                            android:textSize="15sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_alignParentBottom="true"
                            android:background="#C9C9C9" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_json_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text=""
                        android:textColor="#4f4f4f"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="#f3f3f3" />
            </LinearLayout>

            
        </FrameLayout>
    </ScrollView>

</LinearLayout>